<resources>
    <string name="app_name">FavoriteReutersFeeds</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchURL">http://feeds.reuters.com/</string>
    <string name="tagPrompt">Tag your feed</string>
    <string name="queryPrompt">Enter Reuters Feed Path Here (after the reuters.com/)</string>
    <string name="taggedFeeds">Tagged Feeds</string>
    <string name="edit">Edit</string>
    <string name="clearTags">Clear Tags</string>
    <string name="save">Save</string>
    <string name="erase">Erase</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="missingTitle">Missing Text</string>
    <string name="missingMessage">Please enter a feed and tag it.</string>
    <string name="confirmTitle">Are You Sure?</string>
    <string name="confirmMessage">This will delete all saved feeds</string>
</resources>
