<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tableLayout"
    android:background="@android:color/white"
    android:padding="5dp"
    android:stretchColumns="*"
    tools:context=".FavoriteReutersFeeds">

    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/tableRow0"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/queryEditText"
            android:hint="@string/queryPrompt"
            android:imeOptions="actionNext"
            android:layout_span="2"
            />

    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/tableRow1"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tagEditText"
            android:hint="@string/tagPrompt"
            android:gravity="center_vertical"
            android:imeOptions="actionDone"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_column="1"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/saveButton"
            />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableRow2"
        android:background="@color/light_orange"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taggedFeeds"
            android:id="@+id/taggedSearchesTextView"
            android:gravity="center_horizontal"
            android:layout_span="2"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:padding="5dp"
            />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableRow3"
        android:background="@color/light_orange"
        android:layout_weight="1"
        >
        <ScrollView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/queryScrollView"
            android:layout_span="2"
            android:padding="5dp"
            >
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/queryTableLayout"
                android:padding="5dp"
                android:stretchColumns="*"
                >

            </TableLayout>

        </ScrollView>
        
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableRow4"
        >
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearTags"
            android:id="@+id/clearTagsButton"
            android:layout_span="2"
            android:layout_marginTop="5dp"
            />

    </TableRow>

</TableLayout>
